--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -19,11 +19,13 @@ body {
     margin-left: -.1em;
 }
 
-.material-icons.grey400 {color:#BDBDBD;}
+.material-icons.grey400 {
+    color: #BDBDBD;
+}
 
 a.disabled {
-   pointer-events: none;
-   cursor: default;
+    pointer-events: none;
+    cursor: default;
 }
 
 header {
@@ -133,7 +135,7 @@ header {
             font-weight: 200;
             font-size: 2em;
             text-shadow: 0px 3px 5px rgba(0,0,0,0.5);
-            }
+        }
 
         .button {
             display: inline-block;
@@ -180,8 +182,8 @@ header {
     overflow: hidden;
     margin-bottom: 1em;
     height: 250px;
-    background-image: url('/Content/img/playlistheader.jpg'); 
-    background-repeat: no-repeat; 
+    background-image: url('/Content/img/playlistheader.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
 
     .content {
@@ -190,7 +192,7 @@ header {
         max-width: $maxpagewidth;
         color: white;
         top: 0;
-        
+
 
         h1 {
             font-weight: 100;
@@ -214,8 +216,8 @@ header {
             font-weight: 200;
             font-size: 2em;
             text-shadow: 0px 3px 5px rgba(0,0,0,0.5);
-            }
-        
+        }
+
 
         @media screen and (max-width: $mobile-breakpoint) {
             padding: 4% $sidemargin-mobile 3em $sidemargin-mobile;
@@ -252,7 +254,7 @@ header {
         margin-bottom: .6em;
         vertical-align: top;
     }
-        }
+}
 
 .about-user {
     display: inline-block;
@@ -273,8 +275,8 @@ header {
             max-width: 64px;
             max-height: 64px;
             margin-right: .5em;
+        }
     }
-}
 
     @media screen and (max-width: $mobile-breakpoint) {
         display: block;
@@ -291,7 +293,7 @@ header {
     display: inline-block;
     text-align: center;
 
-   img {
+    img {
         display: block;
         width: 50px;
         height: 50px;
@@ -301,10 +303,10 @@ header {
             max-width: 10px;
             max-height: 10px;
             margin-right: .5em;
+        }
     }
-}
 
-        @media screen and (max-width: $mobile-breakpoint) {
+    @media screen and (max-width: $mobile-breakpoint) {
         display: block;
         text-align: left;
 
@@ -314,6 +316,7 @@ header {
         }
     }
 }
+
 .add-playlist {
     margin-bottom: 20px;
     padding-bottom: 20px;
@@ -453,6 +456,71 @@ header {
     }
 }
 
+#fullscreenplayer {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: black;
+    background-size: cover;
+
+    #darkoverlay {
+        position: relative;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+
+        #nowPlayingLogo {
+            position: absolute;
+            right: 10%;
+            bottom: 10%;
+        }
+    }
+
+    #nowPlayingAlbumArt {
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        left: 10%;
+        bottom: 10%;
+        background-size: contain;
+        background-image: url(img/default_cover.png)
+    }
+
+    #nowPlayingArtist {
+        position: absolute;
+        left: 10%;
+        bottom: 10%;
+        margin-left: 250px;
+        margin-bottom: 1.1em;
+        font-size: 3em;
+        font-weight: 500;
+    }
+
+    #nowPlayingTitle {
+        position: absolute;
+        left: 10%;
+        bottom: 10%;
+        margin-left: 250px;
+        margin-bottom: 1em;
+        font-size: 1.5em;
+        font-weight: 300;
+    }
+
+    #fullscreenexitbutton{
+        position: absolute;
+        color: white;
+        top: 10%;
+        right: 10%;
+        font-size: 4em;
+        cursor: pointer;
+    }
+}
+
 #custom-inputform-organisations, #custom-inputform-playlists {
     .first-form-group, .create {
         margin-top: 25px;
@@ -464,7 +532,7 @@ header {
 }
 
 #custom-inputform-registration {
-    border-right: 1px solid #d3d3d3; 
+    border-right: 1px solid #d3d3d3;
     display: block;
 
     .container-form {
@@ -472,14 +540,14 @@ header {
         float: right;
 
         .div-image-form {
-            margin-top: 22px; 
-            margin-bottom: 22px; 
+            margin-top: 22px;
+            margin-bottom: 22px;
             text-align: center;
 
             .image-form {
                 width: 150px;
-                   height: 150px; 
-                   cursor: pointer;  
+                height: 150px;
+                cursor: pointer;
             }
         }
 
@@ -488,17 +556,17 @@ header {
         }
 
         .column-right-form {
-            float: right; 
+            float: right;
             overflow: hidden;
         }
 
         .form-groups {
-                margin-top: 7px;
+            margin-top: 7px;
         }
 
         .create {
             margin-top: 20px;
-                margin-right: 13px;
+            margin-right: 13px;
         }
     }
 }
@@ -571,17 +639,17 @@ header {
     background-color: black;
     border: 0.2px solid;
 }
-    
+
 .form-label {
     width: 90%;
-            vertical-align: middle; 
-            word-wrap: break-word; 
-            float: left;
+    vertical-align: middle;
+    word-wrap: break-word;
+    float: left;
 }
 
 .form-img-icon {
-    cursor: pointer; 
-    float: right; 
+    cursor: pointer;
+    float: right;
     vertical-align: middle;
 }
 
@@ -670,17 +738,19 @@ header {
 .btn-right {
     float: right;
 }
+
 .btn-portal {
     width: 175px;
 }
+
 .btn-left {
     float: left;
 }
 
 .btn-login {
-width: 270px; 
-height: 3em; 
-margin-top: 1em;
+    width: 270px;
+    height: 3em;
+    margin-top: 1em;
 }
 
 .min-margin-top {
@@ -714,9 +784,9 @@ footer {
 }
 
 #footerSlideContainer {
-	position: fixed;
+    position: fixed;
     bottom: 0;
-	width: 100%;
+    width: 100%;
     min-width: 100%;
     left: 0;
     right: 0;
@@ -724,11 +794,20 @@ footer {
 }
 
 #footerSlideContent {
-	width: 70%;
-	height: 20px;
-	margin: auto;
+    width: 70%;
+    height: 20px;
+    margin: auto;
     margin-top: 0.2em;
     vertical-align: middle;
-	color: white;
-	border: none;
+    color: white;
+    border: none;
+    position: relative;
+
+    #fullscreenbutton{
+        color: white;
+        right: 0;
+        top: 1em;
+        position: absolute;
+        cursor: pointer;
+    }
 }
