--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -349,11 +349,12 @@ header {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); }
+    background-color: rgba(0, 0, 0, 0.55); }
     #fullscreenplayer #darkoverlay #nowPlayingLogo {
       position: absolute;
       right: 10%;
-      bottom: 10%; }
+      bottom: 10%;
+      margin-bottom: 3em; }
   #fullscreenplayer #nowPlayingAlbumArt {
     width: 200px;
     height: 200px;
@@ -367,7 +368,7 @@ header {
     left: 10%;
     bottom: 10%;
     margin-left: 250px;
-    margin-bottom: 1.1em;
+    margin-bottom: 1.5em;
     font-size: 3em;
     font-weight: 500; }
   #fullscreenplayer #nowPlayingTitle {
@@ -375,7 +376,7 @@ header {
     left: 10%;
     bottom: 10%;
     margin-left: 250px;
-    margin-bottom: 1em;
+    margin-bottom: 1.8em;
     font-size: 1.5em;
     font-weight: 300; }
   #fullscreenplayer #fullscreenexitbutton {
@@ -385,6 +386,24 @@ header {
     right: 10%;
     font-size: 4em;
     cursor: pointer; }
+  #fullscreenplayer #nowPlayingProgress {
+    display: block;
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
+    margin-left: 250px;
+    right: 10%;
+    height: 13px;
+    background-color: white;
+    margin-bottom: .5em;
+    padding: 2px; }
+    #fullscreenplayer #nowPlayingProgress #nowPlayingProgressBar {
+      background-color: black;
+      display: block;
+      left: 0;
+      right: 0;
+      width: 0%;
+      height: 9px; }
 
 #custom-inputform-organisations .first-form-group, #custom-inputform-organisations .create, #custom-inputform-playlists .first-form-group, #custom-inputform-playlists .create {
   margin-top: 25px; }
