--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -472,12 +472,13 @@ header {
         top: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(0, 0, 0, 0.55);
 
         #nowPlayingLogo {
             position: absolute;
             right: 10%;
             bottom: 10%;
+            margin-bottom: 3em;
         }
     }
 
@@ -496,7 +497,7 @@ header {
         left: 10%;
         bottom: 10%;
         margin-left: 250px;
-        margin-bottom: 1.1em;
+        margin-bottom: 1.5em;
         font-size: 3em;
         font-weight: 500;
     }
@@ -506,7 +507,7 @@ header {
         left: 10%;
         bottom: 10%;
         margin-left: 250px;
-        margin-bottom: 1em;
+        margin-bottom: 1.8em;
         font-size: 1.5em;
         font-weight: 300;
     }
@@ -518,6 +519,28 @@ header {
         right: 10%;
         font-size: 4em;
         cursor: pointer;
+    }
+
+    #nowPlayingProgress{
+        display:block;
+        position: absolute;
+        bottom: 10%;
+        left: 10%;
+        margin-left: 250px;
+        right: 10%;
+        height: 13px;
+        background-color: white;
+        margin-bottom: .5em;
+        padding: 2px;
+
+        #nowPlayingProgressBar{
+            background-color: black;
+            display: block;
+            left: 0;
+            right: 0;
+            width: 0%;
+            height: 9px;
+        }
     }
 }
 
