Fullscreen changes en History tevergeefs proberen te fixen

--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -465,6 +465,7 @@ header {
     color: white;
     background-color: black;
     background-size: cover;
+    background-position: center center;
 
     #darkoverlay {
         position: relative;
