--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -342,7 +342,8 @@ header {
   height: 100%;
   color: white;
   background-color: black;
-  background-size: cover; }
+  background-size: cover;
+  background-position: center center; }
   #fullscreenplayer #darkoverlay {
     position: relative;
     left: 0;
