--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -132,17 +132,17 @@ header {
 
 #playlistbanner {
   width: 100%;
-  min-height: 250px;
+  min-height: 280px;
   z-index: 0;
   position: relative;
   overflow: hidden;
   margin-bottom: 1em;
-  height: 250px;
+  height: 280px;
   background-image: url("/Content/img/playlistheader.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
   #playlistbanner .content {
-    padding: 2.4% 5em 3em 5em;
+    padding: 2.2% 5em 3em 5em;
     margin: 0 auto;
     max-width: 1500px;
     color: white;
@@ -151,7 +151,7 @@ header {
       font-weight: 100;
       color: white;
       font-size: 3.4em;
-      margin-top: 0.5em;
+      margin-top: 0.1%;
       margin-bottom: 0;
       top: 0;
       text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4); }
@@ -161,7 +161,7 @@ header {
       background-color: rgba(0, 0, 0, 0.6); }
     #playlistbanner .content h2 {
       margin-top: 0;
-      margin-bottom: 1em;
+      margin-bottom: 0.4em;
       font-weight: 200;
       font-size: 2em;
       text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5); }
@@ -223,8 +223,7 @@ header {
   .co-organiser img {
     display: block;
     width: 50px;
-    height: 50px;
-    padding-left: .5em; }
+    height: 50px; }
     @media screen and (max-width: 600px) {
       .co-organiser img {
         max-width: 10px;
